Fix margin and padding issues to stop main player starting off-screen.

--- a/components/PageBody.css
+++ b/components/PageBody.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-bottom: 355px;
+  margin-top: 75px;
+  padding-bottom:265px;
   background-color: #8560573e;
 }
