--- a/components/StepVisualizer.css
+++ b/components/StepVisualizer.css
@@ -17,8 +17,9 @@
   width: calc(100% - 30px);
   max-height: 450px;
   min-width: 300px;
-  margin-top: 1em;
+  margin-bottom: 1em;
 }
+
 .StepVisualizer-progress,
 .LocationDiv {
   color: white;
